--- a/src/pages/LandingPage/components/GovernanceSection/GovernanceSection.css
+++ b/src/pages/LandingPage/components/GovernanceSection/GovernanceSection.css
@@ -53,6 +53,7 @@
   width: 500px;
   height: 450px;
   position: relative;
+  
   flex-shrink: 0;
   overflow: hidden;
 }
@@ -263,6 +264,7 @@
 @media (max-width: 480px) {
   .lp-9-container {
     padding: 0 20px;
+    
     gap: 30px;
   }
 
@@ -277,12 +279,15 @@
   }
 
   .lp-9-circle-container {
+    margin-left: 50px;
     width: 100%;
     max-width: 320px;
+    
     height: 300px;
   }
 
   .lp-9-governance-circle-group {
+    
     transform: translate(-50%, -50%) scale(0.75);
   }
 }
