--- a/src/pages/LandingPage/components/HeroSection/HeroSection.css
+++ b/src/pages/LandingPage/components/HeroSection/HeroSection.css
@@ -1051,7 +1051,7 @@ body.sidebar-expanded .lp-1-section {
     
     padding-bottom: 120px;
     align-items: center;
-  justify-content: center;
+   justify-content: center;
   }
 
   .circle-group {
@@ -1062,10 +1062,10 @@ body.sidebar-expanded .lp-1-section {
   }
 
   .radiant-glow-container {
-    width: 1770px;
-    height: 1290px;
+    width: 1670px;
+    height: 1210px;
     position: absolute;
-    visibility: hidden;
+    
    
     top: 100%;
     left: 50%;
@@ -1193,6 +1193,12 @@ body.sidebar-expanded .lp-1-section {
     top: -13%;
   }
 
+
+@media (max-width: 480px) {
+  .lp-section:not(.lp-1-section) {
+    scroll-margin-top: 80px;
+  }
+}
   .navbar-icon-3 {
     left: -1%;
     top: -13%;
